<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foregroundTint="?colorAccent">

    <PreferenceCategory
        android:icon="@drawable/ic_info_black_24dp"
        app:title="@string/pref_header_general">

        <EditTextPreference
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="user_display_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />
        <EditTextPreference
            android:defaultValue="@string/pref_default_email_address"
            android:inputType="textEmailAddress"
            android:key="user_email_address"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_email_address" />
        <ListPreference
            android:defaultValue="@string/pref_default_favorite_social"
            android:entries="@array/pref_entries_favorite_social"
            android:entryValues="@array/pref_values_favorite_social"
            android:key="user_favorite_social"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_favorite_social" />

    </PreferenceCategory>

</PreferenceScreen>